--- a/N14Lurny/assets/css/tutor.css
+++ b/N14Lurny/assets/css/tutor.css
@@ -2,10 +2,10 @@
    1. VARIABLES & RESET
    ========================================= */
 :root {
-  --brand-color: #80BA4C;        
+  --primary-color: #0a801a;       
   --brand-dark: #6da53e;          
   
-  --primary-color: #80BA4C;       
+  --primary-color: #295008;       
   --primary-dark: #5c8a32;        
   
   --text-dark: #0f172a;
